tests/ucc/type/good/array-vs-ptr-1.c
int main(void)
{
    int a[9];
    int *c;

    a = c;

    return 0;
}
